--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "psr/log": "^1.1 || ^2.0 || ^3.0",
         "psr/container": "^1.1 || ^2.0",
         "psr/http-client": "^1.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0 || ^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
